ADD_EXECUTABLE (msftp main.cpp)

TARGET_LINK_LIBRARIES (msftp
  libadicpp
  libfbcpp
  libksys
  libmycpp
  libutf8
)

IF (WIN32 AND NOT UNIX)
  SET (INSTALL_BIN_DIR "")
  SET (INSTALL_ETC_DIR "")
ELSE (WIN32 AND NOT UNIX)
  SET (INSTALL_BIN_DIR "/bin")
  SET (INSTALL_ETC_DIR "/etc")
ENDIF (WIN32 AND NOT UNIX)

INSTALL (
  TARGETS msftp RUNTIME
  DESTINATION "${INSTALL_BIN_DIR}"
  CONFIGURATIONS Release
)

INSTALL (FILES msftp.conf DESTINATION "${INSTALL_ETC_DIR}")
