ADD_EXECUTABLE (msftp main.cpp version.c)

ADD_DEFINITIONS(-DDISABLE_FIREBIRD_INTERFACE -DDISABLE_MYSQL_INTERFACE)

TARGET_LINK_LIBRARIES (msftp
  adicpp
  fbcpp
  ksys
  mycpp
  utf8
  ${LIBPDBUTILS}
)

SET_SOURCE_FILES_PROPERTIES (version.c PROPERTIES GENERATED YES)
ADD_DEPENDENCIES (msftp version msftp_version)

ADD_CUSTOM_TARGET(msftp_version
  COMMAND ${VERSION_EXECUTABLE} version.in version.c
  DEPENDS version.in
  WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
)

SET (MSFTP_EXECUTABLE
  "${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}${CMAKE_BUILD_TYPE}/msftp${CMAKE_EXECUTABLE_SUFFIX}"
  CACHE INTERNAL ""
)

FIND_PROGRAM (UPX upx)

IF (PRIVATE_RELEASE AND NOT CMAKE_BUILD_TYPE MATCHES Deb AND NOT CMAKE_GENERATOR MATCHES "Win64")
  IF (UPX)
    ADD_CUSTOM_COMMAND (
      TARGET msftp POST_BUILD
      COMMAND ${UPX} ARGS -q --brute ${MSFTP_EXECUTABLE}
      WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
      COMMENT ""
    )
  ENDIF (UPX)
ENDIF (PRIVATE_RELEASE AND NOT CMAKE_BUILD_TYPE MATCHES Deb AND NOT CMAKE_GENERATOR MATCHES "Win64")
    
#ADD_CUSTOM_COMMAND (
#  TARGET msftp PRE_BUILD
#  COMMAND ${VERSION_EXECUTABLE} ARGS version.in version.c
#  WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
#  COMMENT "Generate version file"
#)

#IF (SITE STREQUAL "${MAIN_SITE}")
#  ADD_CUSTOM_COMMAND (
#    TARGET msftp POST_BUILD
#    COMMAND ${VERSION_EXECUTABLE} ARGS version.in version.in
#    WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
#    COMMENT "Increase version level"
#  )
#ENDIF (SITE STREQUAL "${MAIN_SITE}")
 
IF (WIN32 AND NOT UNIX)
  SET (INSTALL_BIN_DIR "")
  SET (INSTALL_ETC_DIR "")
ELSE (WIN32 AND NOT UNIX)
  SET (INSTALL_BIN_DIR "/bin")
  SET (INSTALL_ETC_DIR "/etc")
ENDIF (WIN32 AND NOT UNIX)

INSTALL (
  TARGETS msftp RUNTIME
  DESTINATION "${INSTALL_BIN_DIR}"
)

INSTALL (FILES msftp.conf DESTINATION "${INSTALL_ETC_DIR}" RENAME msftp.conf.template)
