ADD_EXECUTABLE (msftpd main.cpp version.c)

TARGET_LINK_LIBRARIES (msftpd
  libadicpp
  libfbcpp
  libksys
  libmycpp
  libutf8
)

SET_SOURCE_FILES_PROPERTIES (version.c PROPERTIES GENERATED YES)
ADD_DEPENDENCIES (msftpd version)
ADD_CUSTOM_COMMAND (
  TARGET msftpd PRE_BUILD
  COMMAND ${VERSION_EXECUTABLE} ARGS version.in version.c
  WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
  COMMENT "Generate version file"
)

IF (SITE STREQUAL "${MAIN_SITE}")
  ADD_CUSTOM_COMMAND (
    TARGET msftpd POST_BUILD
    COMMAND ${VERSION_EXECUTABLE} ARGS version.in version.in
    WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
    COMMENT "Increase version level"
  )
ENDIF (SITE STREQUAL "${MAIN_SITE}")

IF (WIN32 AND NOT UNIX)
  SET (INSTALL_BIN_DIR "")
  SET (INSTALL_ETC_DIR "")
ELSE (WIN32 AND NOT UNIX)
  SET (INSTALL_BIN_DIR "/bin")
  SET (INSTALL_ETC_DIR "/etc")
ENDIF (WIN32 AND NOT UNIX)

INSTALL (
  TARGETS msftpd RUNTIME
  DESTINATION "${INSTALL_BIN_DIR}"
)

INSTALL (FILES msftpd.conf DESTINATION "${INSTALL_ETC_DIR}")
