ADD_EXECUTABLE (mskey
  main.cpp
  version.c
)

TARGET_LINK_LIBRARIES (mskey
  adicpp
  fbcpp
  ksys
  mycpp
  utf8
  ${LIBPDBUTILS}
)

SET_SOURCE_FILES_PROPERTIES (version.c PROPERTIES GENERATED YES)

ADD_DEPENDENCIES (mskey version mskey_version)

ADD_CUSTOM_TARGET(mskey_version
  COMMAND ${VERSION_EXECUTABLE} version.in version.c
  DEPENDS version.in
  WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
)

SET (MSKEY_EXECUTABLE
  "${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}${CMAKE_BUILD_TYPE}/mskey${CMAKE_EXECUTABLE_SUFFIX}"
  CACHE INTERNAL ""
)

FIND_PROGRAM (UPX upx)

IF (PRIVATE_RELEASE AND NOT CMAKE_BUILD_TYPE MATCHES Deb AND NOT CMAKE_GENERATOR MATCHES "Win64")
  IF (UPX)
    ADD_CUSTOM_COMMAND (
      TARGET mskey POST_BUILD
      COMMAND ${UPX} ARGS -q --brute ${MSKEY_EXECUTABLE}
      WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
      COMMENT ""
    )
  ENDIF (UPX)
ENDIF (PRIVATE_RELEASE AND NOT CMAKE_BUILD_TYPE MATCHES Deb AND NOT CMAKE_GENERATOR MATCHES "Win64")
