ADD_EXECUTABLE (msmail
  main.cpp
  server.cpp
  fiber.cpp
  info.cpp
  service.cpp
  version.c
)

ADD_DEFINITIONS(-DDISABLE_FIREBIRD_INTERFACE -DDISABLE_MYSQL_INTERFACE)

TARGET_LINK_LIBRARIES (msmail
  adicpp
  fbcpp
  ksys
  mycpp
  utf8
  ${LIBPDBUTILS}
)

SET_SOURCE_FILES_PROPERTIES (version.c PROPERTIES GENERATED YES)
ADD_DEPENDENCIES (msmail version msmail_version)

ADD_CUSTOM_TARGET(msmail_version
  COMMAND ${VERSION_EXECUTABLE} version.in version.c
  DEPENDS version.in version.c
  WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
)
    
#ADD_CUSTOM_COMMAND (
#  TARGET msmail PRE_BUILD
#  COMMAND ${VERSION_EXECUTABLE} ARGS version.in version.c
#  WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
#  COMMENT "Generate version file"
#)

#IF (SITE STREQUAL "${MAIN_SITE}")
#  ADD_CUSTOM_COMMAND (
#    TARGET msmail POST_BUILD
#    COMMAND ${VERSION_EXECUTABLE} ARGS version.in version.in
#    WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
#    COMMENT "Increase version level"
#  )
#ENDIF (SITE STREQUAL "${MAIN_SITE}")

SET (MSMAIL_EXECUTABLE
  "${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}${CMAKE_BUILD_TYPE}/msmail${CMAKE_EXECUTABLE_SUFFIX}"
  CACHE INTERNAL ""
)

FIND_PROGRAM (UPX upx)
FIND_PROGRAM (ASPR NAMES asprotect aspr12r)
FIND_PROGRAM (PELOCK pelock PATHS "C:/Bin/pelock")

IF (PRIVATE_RELEASE AND CMAKE_BUILD_TYPE STREQUAL "Release" AND NOT CMAKE_GENERATOR MATCHES "Win64")
  IF (PELOCK)
    ADD_CUSTOM_COMMAND (
      TARGET msmail POST_BUILD
      COMMAND ${PELOCK} ARGS "${CMAKE_CURRENT_BINARY_DIR}\\msmail.plk"
      WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
      COMMENT ""
    )
  ELSE (PELOCK)
    IF (ASPR)
      ADD_CUSTOM_COMMAND (
        TARGET msmail POST_BUILD
        COMMAND ${ASPR} ARGS -process "${CMAKE_CURRENT_BINARY_DIR}\\msmail.aspr"
        WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
        COMMENT ""
      )
    ELSE (ASPR)
      IF (UPX)
        ADD_CUSTOM_COMMAND (
          TARGET msmail POST_BUILD
          COMMAND ${UPX} ARGS --brute ${MSMAIL_EXECUTABLE}
          WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
          COMMENT ""
        )
      ENDIF (UPX)
    ENDIF (ASPR)
  ENDIF (PELOCK)
ENDIF (PRIVATE_RELEASE AND CMAKE_BUILD_TYPE STREQUAL "Release" AND NOT CMAKE_GENERATOR MATCHES "Win64")

IF (WIN32 AND NOT UNIX)
  SET (INSTALL_BIN_DIR "")
  SET (INSTALL_ETC_DIR "")
ELSE (WIN32 AND NOT UNIX)
  SET (INSTALL_BIN_DIR "/bin")
  SET (INSTALL_ETC_DIR "/etc")
ENDIF (WIN32 AND NOT UNIX)

INSTALL (
  TARGETS msmail RUNTIME
  DESTINATION "${INSTALL_BIN_DIR}"
)

INSTALL (FILES msmail.conf DESTINATION "${INSTALL_ETC_DIR}" RENAME msmail.conf.template)

