ADD_LIBRARY (msmail1clib SHARED
  client.cpp
  dlldatax.c
  msmail1cImpl.cpp
  msmail1clib.cpp 
  msmail1clib.def
  msmail1clib.idl
  Registry.cpp
  stdafx.cpp
  msmail1clib.rc
  msmail1c.rgs
  msmail1clib.rgs
  version.c
)

ADD_DEFINITIONS (
  -DDISABLE_FIREBIRD_INTERFACE
  -DDISABLE_MYSQL_INTERFACE
  -D_USRDLL
  -D_MERGE_PROXYSTUB
)

TARGET_LINK_LIBRARIES (msmail1clib
  adicpp
  fbcpp
  ksys
  mycpp
  utf8
  ${LIBPDBUTILS}
)

ADD_DEPENDENCIES (msmail1clib msmail)

SET_SOURCE_FILES_PROPERTIES (version.c PROPERTIES GENERATED YES)
ADD_DEPENDENCIES (msmail1clib version msmail1clib_version)

ADD_CUSTOM_TARGET(msmail1clib_version
  COMMAND ${VERSION_EXECUTABLE} version.in version.c
  DEPENDS version.in
  WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
)
      
ADD_DEPENDENCIES (msmail1clib version)

SET (MSMAIL1CLIB_EXECUTABLE
  "${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}${CMAKE_BUILD_TYPE_DIR}/msmail1clib${CMAKE_SHARED_MODULE_SUFFIX}"
  CACHE INTERNAL ""
)

FIND_PROGRAM (ICCPATCH iccpatch)
IF (ICCPATCH AND CMAKE_CXX_COMPILER MATCHES icl)
  ADD_CUSTOM_COMMAND (
    TARGET msmail1clib POST_BUILD
    COMMAND ${ICCPATCH} ARGS ${MSMAIL1CLIB_EXECUTABLE}
    WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
    COMMENT ""
  )
ENDIF (ICCPATCH AND CMAKE_CXX_COMPILER MATCHES icl)

FIND_PROGRAM (UPX upx)
#FIND_PROGRAM (UPXS NAMES upxs upxs306 PATHS "C:/Arx/upxs306" "C:/Bin/upxs306")

IF (PRIVATE_RELEASE AND NOT CMAKE_BUILD_TYPE MATCHES Deb AND NOT CMAKE_GENERATOR MATCHES Win64 AND CMAKE_SYSTEM_NAME MATCHES Windows)
  IF (UPX)
    ADD_CUSTOM_COMMAND (
      TARGET msmail1clib POST_BUILD
      COMMAND ${UPX} ARGS -q --brute ${MSMAIL1CLIB_EXECUTABLE}
      WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
      COMMENT ""
    )
#    IF (UPXS)
#      ADD_CUSTOM_COMMAND (
#        TARGET msmail1clib POST_BUILD
#        COMMAND ${UPXS} ARGS ${MSMAIL1CLIB_EXECUTABLE}
#        WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
#        COMMENT ""
#      )
#    ENDIF (UPXS)
  ENDIF (UPX)
ENDIF (PRIVATE_RELEASE AND NOT CMAKE_BUILD_TYPE MATCHES Deb AND NOT CMAKE_GENERATOR MATCHES Win64 AND CMAKE_SYSTEM_NAME MATCHES Windows)

IF (WIN32 AND NOT UNIX)
  SET (INSTALL_BIN_DIR "")
  SET (INSTALL_ETC_DIR "")
ELSE (WIN32 AND NOT UNIX)
#  SET (INSTALL_BIN_DIR "/lib")
#  SET (INSTALL_ETC_DIR "/etc")
ENDIF (WIN32 AND NOT UNIX)

INSTALL (
  TARGETS msmail1clib LIBRARY RUNTIME
  DESTINATION "${INSTALL_BIN_DIR}"
)

INSTALL (FILES msmail1c.conf DESTINATION "${INSTALL_ETC_DIR}" RENAME msmail1c.conf.template)
