ADD_LIBRARY (msmail1clib SHARED
  msmail1clib.idl
  msmail1clib.def
  msmail1clib.rc
  msmail1c.rgs
  msmail1clib.rgs
  client.cpp
  dlldatax.c
  msmail1cImpl.cpp
  msmail1clib.cpp 
  Registry.cpp
  stdafx.cpp
  version.c
)

ADD_DEFINITIONS (
  -DDISABLE_FIREBIRD_INTERFACE
  -DDISABLE_MYSQL_INTERFACE
  -D_USRDLL
  -D_MERGE_PROXYSTUB
)

TARGET_LINK_LIBRARIES (msmail1clib
  adicpp
  fbcpp
  ksys
  mycpp
  utf8
  ${LIBPDBUTILS}
)

ADD_DEPENDENCIES (msmail1clib msmail)

SET_SOURCE_FILES_PROPERTIES (version.c PROPERTIES GENERATED YES)

ADD_CUSTOM_COMMAND (
  OUTPUT version.c
  COMMAND ${VERSION_EXECUTABLE} version.in version.c
  DEPENDS version.in
  WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
)

GET_TARGET_PROPERTY (MSMAIL1CLIB_EXECUTABLE msmail1clib LOCATION)

FIND_PROGRAM (IDL midl)
IF (IDL)
  IF (CMAKE_BUILD_TYPE MATCHES Deb)
    SET (IDL_FLAGS /D \"_DEBUG\")
  ENDIF (CMAKE_BUILD_TYPE MATCHES Deb)
  SET (IDL_FLAGS ${IDL_FLAGS} /nologo /char signed /Oicf /no_robust /D _USRDLL /D _MERGE_PROXYSTUB)
ENDIF (IDL)

IF (NOT CMAKE_GENERATOR_IS_VS)
  ADD_CUSTOM_TARGET (msmail1clib.tlb
    COMMAND \"${IDL}\" ${IDL_FLAGS} /tlb msmail1clib.tlb /out \"${CMAKE_CURRENT_BINARY_DIR}\" /h msmail1clib.h /iid msmail1clib_i.c /proxy msmail1clib_p.c msmail1clib.idl
    DEPENDS msmail1clib.idl
    WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
  )
  ADD_DEPENDENCIES (msmail1clib msmail1clib.tlb)
ENDIF (NOT CMAKE_GENERATOR_IS_VS)

FIND_PROGRAM (ICCPATCH iccpatch)
IF (ICCPATCH AND CMAKE_CXX_COMPILER MATCHES icl)
  ADD_CUSTOM_COMMAND (
    TARGET msmail1clib POST_BUILD
    COMMAND ${ICCPATCH} ARGS ${MSMAIL1CLIB_EXECUTABLE}
    WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
    COMMENT ""
  )
ENDIF (ICCPATCH AND CMAKE_CXX_COMPILER MATCHES icl)

FIND_PROGRAM (UPX upx)
#FIND_PROGRAM (UPXS NAMES upxs upxs306 PATHS "C:/Arx/upxs306" "C:/Bin/upxs306")

IF (PRIVATE_RELEASE AND NOT CMAKE_BUILD_TYPE MATCHES Deb AND NOT CMAKE_GENERATOR MATCHES Win64 AND CMAKE_SYSTEM_NAME MATCHES Windows)
  IF (UPX)
    ADD_CUSTOM_COMMAND (
      TARGET msmail1clib POST_BUILD
      COMMAND ${UPX} ARGS -q --brute ${MSMAIL1CLIB_EXECUTABLE}
      WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
      COMMENT ""
    )
#    IF (UPXS)
#      ADD_CUSTOM_COMMAND (
#        TARGET msmail1clib POST_BUILD
#        COMMAND ${UPXS} ARGS ${MSMAIL1CLIB_EXECUTABLE}
#        WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
#        COMMENT ""
#      )
#    ENDIF (UPXS)
  ENDIF (UPX)
ENDIF (PRIVATE_RELEASE AND NOT CMAKE_BUILD_TYPE MATCHES Deb AND NOT CMAKE_GENERATOR MATCHES Win64 AND CMAKE_SYSTEM_NAME MATCHES Windows)

INSTALL (
  TARGETS msmail1clib LIBRARY RUNTIME
  DESTINATION "${INSTALL_BIN_DIR}"
)

INSTALL (FILES msmail1c.conf DESTINATION "${INSTALL_ETC_DIR}" RENAME msmail1c.conf.template)
