ADD_EXECUTABLE (msserial main.cpp version.c)

TARGET_LINK_LIBRARIES (msserial
  adicpp
  fbcpp
  ksys
  mycpp
  utf8
  ${LIBPDBUTILS}
)

SET_SOURCE_FILES_PROPERTIES (version.c PROPERTIES GENERATED YES)
ADD_DEPENDENCIES (msserial version)
ADD_CUSTOM_COMMAND (
  TARGET msserial PRE_BUILD
  COMMAND ${VERSION_EXECUTABLE} ARGS version.in version.c
  WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
  COMMENT "Generate version file"
)

SET (MSSERIAL_EXECUTABLE
  "${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}${CMAKE_BUILD_TYPE}/msserial${CMAKE_EXECUTABLE_SUFFIX}"
  CACHE INTERNAL ""
)

FIND_PROGRAM (UPX upx)

IF (PRIVATE_RELEASE AND NOT CMAKE_BUILD_TYPE MATCHES Deb AND NOT CMAKE_GENERATOR MATCHES "Win64")
  IF (UPX)
    ADD_CUSTOM_COMMAND (
      TARGET msserial POST_BUILD
      COMMAND ${UPX} ARGS --brute ${MSSERIAL_EXECUTABLE}
      WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
      COMMENT ""
    )
  ENDIF (UPX)
ENDIF (PRIVATE_RELEASE AND NOT CMAKE_BUILD_TYPE MATCHES Deb AND NOT CMAKE_GENERATOR MATCHES "Win64")

#IF (SITE STREQUAL "${MAIN_SITE}")
#  ADD_CUSTOM_COMMAND (
#    TARGET msserial POST_BUILD
#    COMMAND ${VERSION_EXECUTABLE} ARGS version.in version.in
#    WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
#    COMMENT "Increase version level"
#  )
#ENDIF (SITE STREQUAL "${MAIN_SITE}")

IF (WIN32 AND NOT UNIX)
  SET (INSTALL_BIN_DIR "")
  SET (INSTALL_ETC_DIR "")
ELSE (WIN32 AND NOT UNIX)
  SET (INSTALL_BIN_DIR "/bin")
  SET (INSTALL_ETC_DIR "/etc")
ENDIF (WIN32 AND NOT UNIX)

INSTALL (
  TARGETS msserial RUNTIME
  DESTINATION "${INSTALL_BIN_DIR}"
)

INSTALL (FILES msserial.conf DESTINATION "${INSTALL_ETC_DIR}" RENAME msserial.conf.template)
