ADD_EXECUTABLE (version version.cpp)
IF (NOT ${CMAKE_GENERATOR} MATCHES "Visual Studio")
  SET (BUILD_TYPE_DIR)
ELSE (NOT ${CMAKE_GENERATOR} MATCHES "Visual Studio")
  SET (BUILD_TYPE_DIR "${CMAKE_BUILD_TYPE}")
ENDIF (NOT ${CMAKE_GENERATOR} MATCHES "Visual Studio")
 
SET (VERSION_EXECUTABLE
  "${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}${BUILD_TYPE_DIR}/version${CMAKE_EXECUTABLE_SUFFIX}"
  CACHE INTERNAL ""
)
