ADD_EXECUTABLE (version version.cpp)
IF (NOT ${CMAKE_CXX_COMPILER} MATCHES cl.exe)
  SET (BUILD_TYPE_DIR)
ELSE (NOT ${CMAKE_CXX_COMPILER} MATCHES cl.exe)
  SET (BUILD_TYPE_DIR "${CMAKE_BUILD_TYPE}")
ENDIF (NOT ${CMAKE_CXX_COMPILER} MATCHES cl.exe)
 
SET (VERSION_EXECUTABLE
  "${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}${BUILD_TYPE_DIR}/version${CMAKE_EXECUTABLE_SUFFIX}"
  CACHE INTERNAL ""
)
