STRING (REPLACE "/LTCG" "" CMAKE_EXE_LINKER_FLAGS_RELEASE ${CMAKE_EXE_LINKER_FLAGS_RELEASE})
#SET (CMAKE_C_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /GF /GL")
#SET (CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /GF /GL")


ADD_EXECUTABLE (version version.cpp)
 
SET (VERSION_EXECUTABLE
  "${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}${CMAKE_BUILD_TYPE_DIR}/version${CMAKE_EXECUTABLE_SUFFIX}"
  CACHE INTERNAL ""
)
