include $(top_srcdir)/Makefile.am.inc

lib_LTLIBRARIES = libfbcpp.la

libfbcpp_la_SOURCES = \
	event.cpp \
	db.cpp \
	ecs.cpp \
	fblibic.cpp \
	intf.cpp \
	st.cpp \
	stparam.cpp \
	stvalue.cpp \
	svc.cpp \
	tr.cpp

#libfbcpp_la_LIBADD = ../libutf8/libutf8.la ../libksys/libksys.la
#libfbcpp_la_DEPENDENCIES = ../libutf8/libutf8.la ../libksys/libksys.la
