include $(top_srcdir)/Makefile.am.inc

lib_LTLIBRARIES = libmycpp.la

libmycpp_la_SOURCES = \
	db.cpp \
	ecs.cpp \
	mylibic.cpp \
	intf.cpp \
	st.cpp \
	tr.cpp \
	stparam.cpp \
	stvalue.cpp

#libmycpp_la_LIBADD = ../libutf8/libutf8.la ../libksys/libksys.la
#libmycpp_la_DEPENDENCIES = ../libutf8/libutf8.la ../libksys/libksys.la
