include $(top_srcdir)/Makefile.am.inc

noinst_PROGRAMS = fiber

fiber_SOURCES = fiber.cpp

fiber_LDADD = \
	../../src/libadicpp/libadicpp.la \
	../../src/libksys/libksys.la \
	../../src/libutf8/libutf8.la \
	../../src/libfbcpp/libfbcpp.la \
	../../src/libmycpp/libmycpp.la

fiber_DEPENDENCIES = \
	../../src/libadicpp/libadicpp.la \
	../../src/libksys/libksys.la \
	../../src/libutf8/libutf8.la \
	../../src/libfbcpp/libfbcpp.la \
	../../src/libmycpp/libmycpp.la
